[package]
name = "prism"
version = "0.1.0"
authors = []
edition = "2018"

[profile.release]
debug = true

[features]
default = ["test-utilities"]
test-utilities = []

[dependencies]
ring = "0.14"
byteorder = "1.3"
bincode = "1.1"
serde_derive = "1.0"
serde = "1.0"
hex-literal = "0.1"
rocksdb = "0.12"
clap = "2.32"
log = "0.4"
stderrlog = "0.4"
mio = "0.6"
slab = "0.4"
rand = "0.6"
enum-display-derive="0.1"
mio-extras = "2.0"
bigint = "4"
serde_json = "1.0"
tiny_http = "0.6"
ctrlc = "3.1"
lazy_static = "1.3"
hex = "0.3"
url = "1.7"
base64 = "0.10"
websocket = "0.22.4"
ws ="*"

[dependencies.ed25519-dalek]
version = "1.0.0-pre.1"
default-features = false
features = ["avx2_backend", "std"]
