[package]
name = "prism"
version = "0.1.0"
authors = []
edition = "2018"

[profile.release]
debug = true

[dependencies]
ring = "0.14"
bincode = "1.2"
serde_derive = "1.0"
serde = "1.0"
hex-literal = "0.2"
rocksdb = "0.12"
log = "0.4"
stderrlog = "0.4"
mio = "0.6"
slab = "0.4"
rand = "0.6"
enum-display-derive="0.1"
mio-extras = "2.0"
bigint = "4"
serde_json = "1.0"
tiny_http = "0.6"
ctrlc = "3.1"
lazy_static = "1.3"
hex = "0.3"
url = "1.7"
base64 = "0.10"
crossbeam = "0.7"
statrs = "0.11"

[dependencies.ed25519-dalek]
version = "1.0.0-pre.1"
default-features = false
features = ["avx2_backend", "std"]

[dependencies.clap]
version = "2.33"
features = [ "wrap_help" ]
