[package]
name = "prism"
version = "0.1.0"
authors = []
edition = "2018"

[profile.release]
debug = true

[dependencies]
ring = "0.16"
bincode = "1.2"
serde_derive = "1.0"
serde = "1.0"
hex-literal = "0.2"
rocksdb = "0.13"
log = "0.4"
stderrlog = "0.4"
mio = "0.6"
slab = "0.4"
rand = "0.7"
enum-display-derive="0.1"
mio-extras = "2.0"
bigint = "4"
serde_json = "1.0"
tiny_http = "0.8"
ctrlc = "3.1"
lazy_static = "1.4"
hex = "0.4"
url = "2.1"
base64 = "0.10"
crossbeam = "0.7"
statrs = "0.12"
smol = "0.1"
piper = "0.1"
futures = "0.3"

[dependencies.ed25519-dalek]
version = "1.0.0"
default-features = false
features = ["u64_backend", "std", "batch"]

[dependencies.clap]
version = "2.33"
features = [ "wrap_help" ]
